@@ -65,6 +65,9 @@ void decode_m_packet (const char *from, CORE_ADDR * mem_addr_ptr,
 void decode_M_packet (const char *from, CORE_ADDR * mem_addr_ptr,
 		      unsigned int *len_ptr, unsigned char **to_p,
 		      unsigned int *addr_space = nullptr);
+void decode_x_packet (const char *from, CORE_ADDR * mem_addr_ptr,
+		      unsigned int *len_ptr,
+		      unsigned int *addr_space = nullptr);
 int decode_X_packet (const char *from, int packet_len, CORE_ADDR * mem_addr_ptr,
 		     unsigned int *len_ptr, unsigned char **to_p,
 		     unsigned int *addr_space = nullptr);
